--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -25,6 +25,11 @@
     "vite": "^3.1.6"
   },
   "dependencies": {
+    "@afchamis-ui/eslint-config": "*",
+    "@afchamis-ui/ts-config": "*",
+    "@afchamis-ui/react": "*",
+    "@afchamis-ui/tokens": "*",
+    "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
