--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -26,9 +26,10 @@
   },
   "dependencies": {
     "@afchamis-ui/eslint-config": "*",
-    "@afchamis-ui/ts-config": "*",
     "@afchamis-ui/react": "*",
     "@afchamis-ui/tokens": "*",
+    "@afchamis-ui/ts-config": "*",
+    "phosphor-react": "^1.4.1",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
